mutants.out.old/log/src__proto__single__ent__progress.rs_line_154_col_9.log

*** src/proto/single/ent/progress.rs:154:9: replace Progress::update_builder -> ProgressUpdateBuilder with Default::default()

*** mutation diff:
--- src/proto/single/ent/progress.rs
+++ replace Progress::update_builder -> ProgressUpdateBuilder with Default::default()
@@ -146,11 +146,11 @@
         ProgressUpdate::builder(self.jid.clone())
             .desc(self.desc.clone())
             .percent(percent)
             .build()
     }
 
     /// Create an instance of `ProgressUpdateBuilder` for the job.
     pub fn update_builder(&self) -> ProgressUpdateBuilder {
-        ProgressUpdateBuilder::new(self.jid.clone())
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 }


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-jIMFg4.tmp/Cargo.toml --all-features
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-jIMFg4.tmp)
error[E0277]: the trait bound `ProgressUpdateBuilder: Default` is not satisfied
   --> src/proto/single/ent/progress.rs:154:9
    |
154 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `ProgressUpdateBuilder`
    |
help: consider annotating `ProgressUpdateBuilder` with `#[derive(Default)]`
    |
11  | #[derive(Debug, Clone, Serialize, #[derive(Default)]
    |                                   ++++++++++++++++++

For more information about this error, try `rustc --explain E0277`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
